Archive2/df/ca27ada1425c34/output
main.cpp:5:1: error: stray ‘\303’ in program
 Öffentlichkeit : 
 ^
main.cpp:5:1: error: stray ‘\226’ in program
main.cpp:6:1: error: stray ‘\303’ in program
 / / alles ab hier ist öffentlich, bis eine andere specifier erscheint
 ^
main.cpp:6:1: error: stray ‘\266’ in program
main.cpp:8:1: error: stray ‘\303’ in program
 geschützt : 
 ^
main.cpp:8:1: error: stray ‘\274’ in program
main.cpp:9:1: error: stray ‘\303’ in program
 / / alles von hier aus ist geschützt
 ^
main.cpp:9:1: error: stray ‘\274’ in program
main.cpp:3:1: error: expected unqualified-id before ‘/’ token
 / / als Standard alles in einer Klasse ist privat
 ^
